# Sovereign_Debt_Forecasting_Tool

./: README.md  notebook.ipynb  pyproject.toml  train_and_store_model.py
data/raw/France/: 138151a4-6fe8-4339-9bb7-028bdb79d3b3_Series - Metadata.csv  France_debt_to_gdp.csv  France_deficit.csv
models/: prophet_model.py
models/trained_models/: france_prophet_model.pkl
utils/: data_loader.py
